--- a/TeX/src/main.tex
+++ b/TeX/src/main.tex
@@ -404,6 +404,28 @@
         \left( x_0^{(p)}, x_1^{(p)}, \ldots x_{N-1}^{(p)} \right)
         \right).\label{eq:nd-trajectory-tensor}
     \end{equation}
+    «атем траекторный тензор представл€етс€ в виде своего HOSVD
+    \begin{equation}
+        \mathcal{H} = \sum_{l=1}^{L} \sum_{k=1}^{K} \sum_{p=1}^{P}
+        c_{lkp} U^{(1)}_l \circ U^{(2)}_k \circ U^{(3)}_p.
+        \label{eq:nd-hosvd}
+    \end{equation}
+
+    ≈сли во временном р€де отсутствует шум, то $1$- и $2$-ранги траекторного тензора
+    $\mathcal{H}$ будут равны $2R$, $3$-ранг будет равен $R$,
+    и верхние пределы суммировани€ в представлении~\eqref{eq:1d-hosvd} будут
+    равны соответствующим $n$-рангам.
+    ¬ случае, если во временном р€де присутствует шум, то у траекторного тензора будут максимальные $n$-ранги,
+    и тогда строитс€ приближение траекторного тензора
+     \begin{equation}
+        \widehat{\mathcal{H}} = \sum_{l=1}^{2R} \sum_{k=1}^{2R}
+        \sum_{p=1}^{R} c_{lkp} U^{(1)}_l \circ U^{(2)}_k \circ U^{(3)}_p.
+        \label{eq:nd-cropped-hosvd}
+    \end{equation}
+
+    ѕоследний шаг алгоритма полностью аналогичен шагу восстановлени€ в алгоритме
+    High-Order SSA и заключаетс€ в усреднении полученного приближени€ $\widehat{\mathcal{H}}$
+    вдоль побочных <<плоскостей>> ${l+k+p = \operatorname{const}}$.
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
