--- a/TeX/src/main.tex
+++ b/TeX/src/main.tex
@@ -85,7 +85,23 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-    \razdel[n]{Введение}
+    \razdel{Введение}
+    SSA (Singular Spectrum Analysis)~\cite{ssa} является распространённым~\cite{ezhov-ssa} методом анализа временных рядов.
+    Этот метод используется, в частности, для выделения сигнала и выделения тренда и периодических компонент из временного ряда.
+    Метод SSA основан на сингулярном разложении особой матрицы построенной по временному ряду, называемой траекторной.
+    Обобщением метода SSA на случай многомерных сигналов является метод MSSA~\cite{mssa}.
+    Для оценки параметров временного ряда в параметрической модели используется метод ESPRIT
+    (Estimation of signal parameters via rotational invariance techniques)~\cite{ESPRIT}, который также основан на
+    сингулярном разложении траекторной матрицы.
+    В работе~\cite{papy-esprit} предлагается модификация метода ESPRIT, основанная на переходе от траекторной матрицы и
+    матричного сингулярного разложения к траекторному тензору и тензорному сингулярному разложению, и
+    утверждается преимущество такой модификации.
+    В данной работе мы рассматриваем аналогичные модификации методов SSA и MSSA для выделения сигнала
+    из временных рядов в непараметрической модели.
+    Были проведены сравнения методов SSA и MSSA с их тензорными модификациями на временных рядах,
+    аналогичных тем, что были рассмотрены в~\cite{papy-esprit}.
+    Было выявлено преимущество тензорной модификации в случае многомерного сигнала, однако преимущества
+    для случая одномерного сигнала установить не удалось.
 
     \razdel{Постановка задачи для одномерного сигнала}
     Пусть дан одномерный временной ряд, состоящий из $N$ комплексных значений $s_n$, $n=0, 1,\ldots, N-1$,
@@ -888,6 +904,7 @@
         \bibitem{ssa} Golyandina~N., Nekrutkin~V., Zhigljavsky~A.\: A. Analysis of Time Series Structure - SSA and Related Techniques. Chapman and Hall/CRC, 2001. 320~p.
         \bibitem{mssa} Golyandina~N., Zhigljavsky~A. Singular Spectrum Analysis for Time Series. Springer Berlin, Heidelberg, 2020. 146~p.
         \bibitem{hosvd} De~Lathauwer~L., De~Moor~B., Vandewalle~J. A Multilinear Singular Value Decomposition // SIAM Journal on Matrix Analysis and Applications. 2000. №4. P. 1253-1278.
+        \bibitem{ezhov-ssa} Ежов~Ф.\: В. Исследование гибридных моделей нейронных сетей с применением SSA на примере реальных данных // Процессы управления и устойчивость. 2022. №1. С. 223--231.
 %        \bibitem{Abb} Аббасов~М.\:Э. Исчисление коэкзостеров второго порядка // Вестник Санкт-Петербургского университета. Прикладная математика. Информатика. Процессы управления. 2018. Т. 14. №~4. С. 276--285.
 %        \bibitem{khar2} Харитонов~В.\:Л. Функционалы Ляпунова с заданной производной: Матрицы Ляпунова // Вестник Санкт-Петербургского университета. Прикладная математика. Информатика. Процессы управления. 2005. №~2. С.~200--209.
 
