--- a/TeX/src/main.tex
+++ b/TeX/src/main.tex
@@ -443,6 +443,66 @@
     High-Order SSA и заключается в усреднении полученного приближения $\widehat{\mathcal{H}}$
     вдоль побочных <<плоскостей>> ${l+k+p = \operatorname{const}}$.
 
+    \razdel{Численные сравнения}
+    Нами были проведены численные сравнения методов SSA и MSSA с их тензорными аналогами
+    HO-SSA и HO-MSSA соответственно.
+    Точность выделения сигнала сравнивалась с помощью RMSE оценки сигнала от его истинного значения по 1000
+    реализаций шума.
+    Методы сравнивались на одних и тех же реализациях шума, все различия значимы при уровне значимости $\alpha = 0.05$.
+
+    \podrazdel{Одномерный сигнал}
+    Пусть временной ряд имеет вид
+    \begin{equation}
+        \begin{split}
+            x_n = e^{-0.01 n} \cos(2\pi 0.2 n) + e^{-0.02 n} \cos(2\pi 0.22 n) + \varepsilon_n,
+        \end{split}\label{eq:1d-comparison}
+    \end{equation}
+    где $n=0,1,\ldots, 24$, $\varepsilon_n$~-- последовательность независимых нормальных случайных величин
+    со стандартным отклонением $\sigma = 0.03$.
+
+    Экспериментально было получено, что для рассматриваемого ряда оптимальная длина окна $L$ в методе SSA равна $13$,
+    а оптимальные длины окон $I$ и $L$ в методе HO-SSA равны $4$ и $9$ соответственно.
+    \Table{RMSE оценки одномерного сигнала \label{tab:1d-rmse}}{|c|c|}{
+    SSA & HO-SSA \nextline
+    $0.0188$ & $0.0197$ \nextline
+    }{}
+    В таблице~1 приведены значения RMSE оценок одномерного сигнала~\eqref{eq:1d-comparison} методами
+    SSA и HO-SSA.
+    Видно, что метод SSA отделил сигнал с б\`{о}льшей точностью, чем метод HO-SSA, что не соответствует результатам~\cite{papy-esprit},
+    где тензорный метод оказался точнее.
+
+    \podrazdel{Многомерный сигнал}
+    Пусть временной ряд имеет вид
+    \begin{equation}
+        \begin{split}
+            x_n^{(p)} = c_1^{(p)} e^{-0.01 n} \cos(2\pi 0.2 n) + c_2^{(p)} e^{-0.02 n} \cos(2\pi 0.22 n) + \varepsilon_n,
+        \end{split}\label{eq:nd-comparison}
+    \end{equation}
+    где $n=0,1,\ldots, 24$, $p=1,2,\ldots, 12$, $\varepsilon_n$~-- последовательность независимых нормальных случайных величин
+    со стандартным отклонением $\sigma = 0.02$.
+
+    Экспериментально было получено, что для рассматриваемого ряда оптимальная длина окна $L$ в методе MSSA равна $22$,
+    а в методе HO-MSSA~-- $20$.
+    \Table{RMSE оценки многомерного сигнала}{|c|c|}{
+    MSSA & HO-MSSA \nextline
+    $0.0107$ & $0.0079$ \nextline
+    }{}
+    В таблице~2 приведены значения RMSE оценок многомерного сигнала~\eqref{eq:nd-comparison} методами
+    MSSA и HO-MSSA.
+    Видно, что метод HO-MSSA отделил сигнал с б\`{о}льшей точностью, чем метод MSSA, что аналогично результатам, полученным
+    в работе~\cite{papy-esprit}.
+    %%    \Table{Нумерованная таблица}{|p{1cm}|p{3cm}|p{3cm}|}{
+%%        \centering\textbf{\No{} п/п} & \centering{\textbf{Данные типа 1}} & \centering{\textbf{Данные типа 2}} \nextline
+%%        \centering10223 & Первое число & Первое слово \nextline
+%%        \centering10223 & Второе число & Второе слово \nextline
+%%        \centering10223 & Третье число & Третье слово \nextline
+%%    }
+%    \begin{equation}
+%        \begin{split}
+%            \widehat{\operatorname{RMSE}}()=\sqrt{\frac{1}{m} \sum_{i=1}^{m} \widehat{\operatorname{MSE}}(\tS_i, \tX)},\\
+%            \widehat{\operatorname{MSE}}(\tS, \tX)=\frac 1 N \sum_{k=1}^{N} (s_i-x_i)^2.
+%        \end{split}\label{eq:RMSE}
+%    \end{equation}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %    \razdel{Самое полезное замечание для <<чайников>> :)} ПРОСТО возьмите исходный файл
